# Alexandria-MIVP

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  UPDATES.md  conftest.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alexandria_mivp/: __init__.py  alexandria_mivp.py  alexandria_v2.py  audit_gate.py  cross_agent_graph.py  formal_verification.py  heartbeat.py  message_router.py  moltbook_integration.py  sqlite_store.py  sub_agent.py  uncertainty_propagator.py
docs/: api_reference.md  architecture.md  getting_started.md  openclaw_integration.md  use_cases.md
examples/: agent_identity.py  basic_usage.py  integration_demo.py  minimal_end_to_end.py  simple_fixes_demo.py  sqlite_demo.py  verification_demo.py
src/: __init__.py  alexandria_mivp.py  alexandria_v2.py  audit_gate.py  distributed_store.py  external_anchor.py  heartbeat.py  message_router.py  mivp_impl.py  moltbook_integration.py  performance.py  sqlite_store.py  sub_agent.py  uncertainty_propagator.py
tests/: test_alexandria.py  test_audit_gate.py  test_cross_agent_graph.py  test_distributed_store.py  test_extended_runtime_hash.py  test_external_anchor.py  test_formal_verification.py  test_heartbeat.py  test_integration.py  test_message_router.py  test_mivp_vectors.py  test_moltbook_integration.py  test_performance.py  test_sqlite_identity_queries.py  test_sub_agent.py  test_uncertainty_propagator.py
tests/vectors/: identity_vectors.json  patch_chain_vectors.json
